# rust-chess

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
chess/: Cargo.toml
chess/src/: board.rs  game.rs  lib.rs  piece.rs
chess/src/benches/: board_bench.rs
chess/src/board/: coord.rs  file.rs  mod.rs  rank.rs  square.rs
chess/src/errors/: mod.rs
chess/src/game/: mod.rs
chess/src/piece/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
