[package]
name = "chess"
version = "0.1.0"
authors = ["Zachery Johnson <zacheryjohnson13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "board_bench"
harness = false
path = "src/benches/board_bench.rs"
